# dw-log-forwarder

./: .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  app.config.template  dw-log-forwarder.cabal  stack.yaml
app/: Main.hs
migrations/mssql/: 0010-init.sql
src/: Config.hs  DwLog.hs  LogShipperDb.hs  SmtpLogHandler.hs
src/DwLog/: LogParsing.hs
src/DwLog/LogParsing/: IO.hs  Streaming.hs  WebDav.hs
test/DwLog/: LogParsingSpec.hs
