name:                dw-log-forwarder
version:             0.1.0.0
synopsis:            Parses a multitude of Demandware log files and forwards them to Logstash.
description:         Please see README.md
homepage:            https://github.com/cqlcorp/dw-log-forwarder
license:             MIT
license-file:        LICENSE
author:              Chad Gilbert
maintainer:          chad.gilbert@cqlcorp.com
copyright:           2016 Chad Gilbert
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     DwLog
                     , DwLog.LogParsing
                     , DwLog.LogParsing.Streaming
                     , DwLog.LogParsing.IO
                     , DwLog.LogParsing.WebDav
                     , Config
                     , LogShipperDb
                     , SmtpLogHandler
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3 && < 4
                     , time >= 1.5
                     , aeson >= 0.11.2
                     , text >= 1.2
                     , bytestring >= 0.10
                     , lens >= 4.13 && < 5
                     , wreq >= 0.4.1 && < 1
                     , aeson-lens >= 0.5 && < 1
                     , regex-tdfa >= 1.2.2 && < 2
                     , regex-tdfa-text >= 1.0.0 && < 2
                     , http-client >= 0.4.29 && < 1
                     , HDBC >= 2.4.0.1 && < 3
                     , HDBC-odbc >= 2.5 && < 3
                     , zlib >= 0.6.1 && < 1
                     , array >= 0.5.1 && < 2
                     , hslogger >= 1.2 && < 2
                     , smtp-mail >= 0.1.1 && < 1
  default-language:    Haskell2010

executable dw-log-forwarder
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , dw-log-forwarder
                     , parsec >= 3 && < 4
                     , directory >= 1.2
                     , text >= 1.2
                     , aeson >= 0.11.2
                     , bytestring >= 0.10
                     , time >= 1.5
                     , lens >= 4.13 && < 5
                     , wreq >= 0.4.1 && < 1
                     , connection >= 0.2.5 && < 1
                     , http-client-tls >= 0.2.4.1 && < 1
                     , regex-tdfa >= 1.2.2 && < 2
                     , regex-tdfa-text >= 1.0.0 && < 2
                     , filepath >= 1.3 && < 2
                     , array >= 0.5.1 && < 2
                     , hslogger >= 1.2 && < 2
                     , smtp-mail >= 0.1.1 && < 1
  default-language:    Haskell2010

test-suite dw-log-forwarder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dw-log-forwarder
                     , hspec
                     , QuickCheck
                     , parsec >= 3 && < 4
                     , directory >= 1.2
                     , time >= 1.5
                     , text >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cqlcorp/dw-log-forwarder
